Fixed Word Wrap

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -5,7 +5,7 @@ h1 {
     color: khaki;
     font-weight: bold;
     text-align: center;
-    text-wrap: normal;
+    word-wrap: break-word;
     }
 
 h2.msgb {
